# si_lecture_kea_2024

./: .gitignore  README.md  app.js  monitoring.db  package-lock.json  package.json
.github/workflows/: azure-webapps-node.yml
00._Tasks/01._file_format/: me.csv  me.json  me.txt  me.xml  me.yaml
00._Tasks/03a._Data_parsing_server/: README.md
00._Tasks/03a._Data_parsing_server/node_server/: package.json  util.js
00._Tasks/03a._Data_parsing_server/python_server/: Person.py  main.py  pyproject.toml  read_csv_file.py  read_json_file.py  read_txt_file.py  read_xml_file.py
00._Tasks/03a._Data_parsing_server/python_server/files/: person.json  person.txt
00._Tasks/03a/node_server/: package-lock.json
00._Tasks/03a/python_server/: main.py  pyproject.toml
00._Tasks/04._/04b._Database_granular_access/: Database_docs.md  Exposee.md  Integrator.md  README.md
00._Tasks/04._Real-time_communication_part_2/04b._Database_granular_access/: Exposee.md
00._Tasks/05._Real-time_communication_part_3/05a._Expose_and_integrate_with_a_webhook_system/: README.md  app.js  monitoring.db  package-lock.json  package.json  readme.md
01._Misc/: google.html
02._Data_Files copy/: me.csv  me.txt
03._Modules/html_no_modules/: index.html  mymodule.js
03._Modules/html_with_modules/: index.html
03._Modules/node_commonjs_modules/: index.js
04._Encoding_Decoding/node/: index.js
04._Encoding_Decoding/python/: main.py
05._Python_Envarioments/03._Poetry_Env/: pyproject.toml
06._Servers/node/: index.js  package-lock.json  package.json  util.js
06._Servers/node/files/: person.xml
06._Servers/python/: README.md  main.py  pyproject.toml
07._Server-To-Server/node/: app.js  package.json
07._Server-To-Server/python/: main.py  pyproject.toml
08._Environment_Variables/node/: index.js  package.json
08._Environment_Variables/python/: main.py  pyproject.toml
10._Date/node/: index.js
10._Date/python/: main.py
11._short_polling/node/: app.js
12._Long_Polling/node/: app.js
13._Server-send_Events/python-sse/: main.py  pyproject.toml
13._Server-send_Events/python-sse/templates/: index.html
14._Websockets/node-websockets/: index.html  package.json  server.js
14._Websockets/python-fastapi/: main.py  pyproject.toml
14._Websockets/python-plain/: pyproject.toml
15._Webhooks/node-webhooks/: app.js  package.json
15._Webhooks/python-webhooks/: main.py  pyproject.toml
16._CORS/: index.html
16._CORS/node/: app.js
16._CORS/python-CORS/: main.py  pyproject.toml
17._Multipart-Forms/: index.html  nestedForms.html
17._Multipart-Forms/node-multipart-forms/: app.js  package-lock.json  package.json
17._Multipart-Forms/python-multipart-forms/: main.py  pyproject.toml
18._Images/: base64.html
19._Audio/: index.html
20._MPEG_DASH/: app.js
21._MYSQL_Backup/: backup.sql
23._Database_Migrations/node-knex/: index.js  knexfile.js
23._Database_Migrations/python-alembic/: alembic.ini  pyproject.toml
26._GraphQL/01._node_basic/: app.js  package-lock.json
27._Web_Scraping_Crawling/01._node/: index.html  index.js  package-lock.json
27._Web_Scraping_Crawling/02._python/: main.py  pyproject.toml
27._Web_Scraping_Crawling/04._Scrapy_basic/: pyproject.toml
27._Web_Scraping_Crawling/05._Scrapy_Wiki_Crawler/: pyproject.toml
27._Web_Scraping_Crawling/05._Scrapy_Wiki_Crawler/wikicrawler/: output.json
database/: ddl_sqlite.js
database/actions/: deleteWebhook.js  readWebhooks.js
terraformSSH/: terraform.tfstate  terraform.tfstate.backup
terraform_lecture/terraformSSH/: main.tf
terraforminit/: main.tf  terraform.tfstate  terraform.tfstate.backup
(+111 files in other folders)
