[tool.poetry]
name = "03-poetry-env"
version = "0.1.0"
description = ""
authors = ["Rasmus-Kibshede <2740ralle@gmail.com>"]
readme = "README.md"
packages = [{include = "03"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
