[tool.poetry]
name = "first_server"
version = "0.1.0"
description = "This is my first python server"
authors = ["Rasmus-Kibshede <2740ralle@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.27.1"
fastapi = "^0.109.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
