[tool.poetry]
name = "python-cors"
version = "0.1.0"
description = ""
authors = ["Rasmus-Kibshede <2740ralle@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.29.0"
fastapi = "^0.110.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
